Move configuration to IdePlugin